# segtree

./: .gitmodules  CMakeLists.txt  README.md  main_mode.cpp  main_rmq_static.cpp  main_rq_group.cpp  main_segtree.cpp  main_stack_queue.cpp  range_query.hpp
benchmark/: bench_util.hpp  point_updates.cpp  range_updates.cpp  rmq.cpp  rmq_all.cpp  rmq_constant.cpp  rmq_create.cpp  rmq_linear.cpp  rq_group_all.cpp  rq_group_linear.cpp  rq_mode_linear.cpp  sqrt_ceil.cpp
include/: fenwick_tree.hpp  functions.hpp  range_query.hpp  rmq_cartesian.hpp  rmq_compact.hpp  rmq_fast.hpp  rq_group.hpp  rq_mode_compact.hpp  rq_mode_fast.hpp  segtree.hpp  segtree_lazy.hpp  segtree_semi.hpp  stack_semi.hpp  util.hpp
include/baseline/: rmq_slow.hpp  rq_mode_slow.hpp  segtree_slow.hpp  semi_slow.hpp
include/models/: rmq_slow.hpp
include/util/: _elem_handle.hpp  elem_handle.hpp  functions.hpp  range_handle.hpp  util.hpp
test/: rmq.cpp  rq_group.cpp  rq_mode.cpp  updates.cpp  util_math.cpp
